<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_background"
    tools:context=".ForgotActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotyourpassword"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/interbold"
        android:textSize="24sp"
        android:textColor="@color/brown"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotpasswordmessage"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/interregular"
        android:textSize="12sp"
        android:textColor="@color/brown"/>


    <EditText
        android:id="@+id/emailforgotpass"
        android:alpha=".60"
        android:fontFamily="@font/interregular"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_border"
        android:backgroundTint="@color/textfiledbackgroundcolor"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/brown"
        android:textSize="14sp">

    </EditText>


    <Button
        android:id="@+id/resetpassword"
        android:layout_width="250dp"
        android:fontFamily="@font/interbold"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:textColorHint="@color/white"
        android:alpha="0.60"
        android:hint="@string/resetpassword"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/gobacktologinscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/interregular"
        android:textSize="12sp"
        android:textColor="@color/brown"/>
</LinearLayout>
