<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/register_background"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/interbold"
        android:textSize="30sp"
        android:textColor="@color/textbrown"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/interregular"
        android:textSize="14sp"
        android:textColor="@color/textbrown"/>


    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:alpha=".60"
        android:background="@drawable/rounded_border"
        android:backgroundTint="@color/textfiledbackgroundcolor"
        android:fontFamily="@font/interregular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColorHint="@color/textbrown"
        android:textSize="17sp">

    </EditText>

    <EditText
        android:id="@+id/password"
        android:alpha=".60"
        android:fontFamily="@font/interregular"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_border"
        android:backgroundTint="@color/textfiledbackgroundcolor"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/textbrown"
        android:textSize="17sp">

    </EditText>

    <Button
        android:id="@+id/submit"
        android:layout_width="250dp"
        android:fontFamily="@font/interbold"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/textbrown"
        android:textColorHint="@color/white"
        android:alpha="0.60"
        android:hint="@string/register"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/login"
        android:fontFamily="@font/interregular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/already_have_an_account_login"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        android:textColor="@color/textbrown" />

</LinearLayout>
