<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="6dp"
    app:cardBackgroundColor="@color/white"
    app:cardUseCompatPadding="true"
    android:layout_marginBottom="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rv_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textviewborder"
        android:padding="20dp">

        <ImageView
            android:id="@+id/recipeImage"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/recipefefaultimage"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/recipeImage">

            <TextView
                android:id="@+id/Nameofrecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/healthydosa"
                android:fontFamily="@font/interbold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:padding="7dp"
                android:drawablePadding="4dp"
                app:drawableStartCompat="@drawable/plateutensils"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipefetchdescription"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/interbold"
                android:textColor="@color/black"
                android:alpha="0.70"
                android:textSize="16sp"
                android:padding="4dp"
                android:drawablePadding="4dp"
                app:drawableStartCompat="@drawable/description_icon" />


            <TextView
                android:id="@+id/Descriptionofrecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/healthydosa"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/interbold"
                android:textSize="20sp"
                android:padding="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipefetchingredients"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/interbold"
                android:textColor="@color/black"
                android:alpha="0.70"
                android:textSize="16sp"
                android:padding="4dp"
                android:drawablePadding="4dp"
                app:drawableStartCompat="@drawable/ingredients_icon" />

            <TextView
                android:id="@+id/Ingredientsofrecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/healthydosa"
                android:fontFamily="@font/interbold"
                android:textSize="20sp"
                android:padding="4dp"
               />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>